// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should left align title 1`] = `
<nav
  className="application-header  mko_1x9y6no-applicationHeader"
>
  <h1
    className="application-header__title"
  >
    Hello
  </h1>
  <div
    className="flex-spacer"
  />
</nav>
`;

exports[`should render navLeft 1`] = `
<nav
  className="application-header  mko_1x9y6no-applicationHeader"
>
  <div
    className="application-header__links-block"
  >
    <div />
  </div>
  <div
    className="flex-spacer"
  />
  <div
    className="flex-spacer"
  />
</nav>
`;

exports[`should render navRight 1`] = `
<nav
  className="application-header  mko_1x9y6no-applicationHeader"
>
  <div
    className="flex-spacer"
  />
  <div
    className="flex-spacer"
  />
  <div
    className="application-header__links-block"
  >
    <div />
  </div>
</nav>
`;

exports[`should render title 1`] = `
<nav
  className="application-header  mko_1x9y6no-applicationHeader"
>
  <div
    className="flex-spacer"
  />
  <h1
    className="application-header__title"
  >
    hello world
  </h1>
  <div
    className="flex-spacer"
  />
</nav>
`;

exports[`should render with minimum props 1`] = `
<nav
  className="application-header  mko_1x9y6no-applicationHeader"
>
  <div
    className="flex-spacer"
  />
  <div
    className="flex-spacer"
  />
</nav>
`;
